@@ -77,6 +77,7 @@ module Rake
     def define
       super
       task :package => [:gem]
+      desc "Build the gem file #{gem_file}"
       task :gem => ["#{package_dir}/#{gem_file}"]
       file "#{package_dir}/#{gem_file}" => [package_dir] + @gem_spec.files do
         when_writing("Creating GEM") {
